<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    app:cardCornerRadius="12dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/face"
            android:id="@+id/contact_profile_img"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/new_contact_icon"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:fontFamily="@font/comic_neue_bold"
            android:gravity="center"
            android:text="New"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UserName"
            android:id="@+id/chatNameText"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:fontFamily="@font/comic_neue_bold"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>