...



    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chat_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:paddingBottom="4dp"
        android:theme="?actionBarTheme"
        android:background="@drawable/white_grey_border"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageButton
                android:id="@+id/chat_back_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:onClick="back"
                android:scaleType="centerCrop"
...
