<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ChatsFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Friends"
        android:id="@+id/friendsName"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/comic_neue_bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/contactsRecyclerView"
        android:scrollbars="horizontal"
        android:layout_below="@id/friendsName"/>

    <TextView
        android:id="@+id/chatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactsRecyclerView"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="Chats"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/comic_neue_bold"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chatsRecyclerView"
        android:layout_marginTop="30dp"
        android:layout_below="@id/chatName"
        />

</RelativeLayout>